k8s-docker-compose-prod-env.yml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "5329"
      port: 5329
      targetPort: 5329
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vrooli-ingress
spec:
  rules:
    - host: "vrooli.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 5329
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port:
                  number: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: db
    spec:
      containers:
        args:
          - |
            exec docker-entrypoint.sh postgres"
        image: ankane/pgvector:v1.9.7
        livenessProbe:
          exec:
            command:
              - pg_isready -U site && psql -U site -d postgres -c 'SELECT 1'
          failureThreshold: 5
          periodSeconds: 10
          timeoutSeconds: 5
        name: db
        ports:
          - containerPort: 5432
        resources: {}
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: db-claim0
          - mountPath: /docker-entrypoint-initdb.d
            name: db-claim1
          - mountPath: /srv/app/scripts
            name: scripts-claim
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
        - name: db-claim2
          persistentVolumeClaim:
            claimName: db-claim2
        - name: scripts-claim
          persistentVolumeClaim:
            claimName: scripts-claim
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: vrooli-app
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/vrooli-app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/vrooli-app: "true"

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nginx-proxy
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/nginx-proxy: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nginx-proxy: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - /srv/app/scripts/redis.sh
          image: redis:7-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/data/redis
              name: redis-claim0
            - mountPath: /srv/app/scripts
              name: scripts-claim
      restartPolicy: Always
      volumes:
        - name: redis-claim0
          persistentVolumeClaim:
            claimName: redis-claim0
        - name: scripts-claim
          persistentVolumeClaim:
            claimName: scripts-claim
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-proxy: "true"
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: server
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - /srv/app/scripts/server.sh
          image: matthalloran8/vrooli_server:prod-1.9.7
          livenessProbe:
            exec:
              command:
                - 'node -e "require(''http'').request({hostname: ''localhost'', port: process.env.PORT_API || 5329, path: ''/healthcheck''}, res => { if (res.statusCode === 200) { process.exit(0) } else { process.exit(1) } }).on(''error'', err => { process.exit(1) }).end()"'
            failureThreshold: 15
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5
          name: server
          ports:
            - containerPort: 5329
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/packages/ui/dist
              name: ui-dist-claim
            - mountPath: /srv/app/data/logs
              name: server-claim0
            - mountPath: /srv/app/data/uploads
              name: server-claim1
      restartPolicy: Always
      volumes:
        - name: ui-dist-claim
          persistentVolumeClaim:
            claimName: ui-dist-claim
        - name: server-claim0
          persistentVolumeClaim:
            claimName: server-claim0
        - name: server-claim1
          persistentVolumeClaim:
            claimName: server-claim1
        - name: server-claim2
          persistentVolumeClaim:
            claimName: server-claim2
        - name: server-claim3
          persistentVolumeClaim:
            claimName: server-claim3
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-proxy: "true"
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: ui
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - /srv/app/scripts/ui.sh
          image: matthalloran8/vrooli_ui:prod-1.9.7
          name: ui
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/packages/ui/dist
              name: ui-dist-claim
      restartPolicy: Always
      volumes:
        - name: ui-dist-claim
          persistentVolumeClaim:
            claimName: ui-dist-claim
status: {}
