k8s.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: docs
  name: docs
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 4000
  selector:
    io.kompose.service: docs
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "5329"
      port: 5329
      targetPort: 5329
  selector:
    io.kompose.service: server
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - chmod +x /srv/app/scripts/* && /srv/app/scripts/db.sh
          image: ankane/pgvector:v0.4.1
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - site
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-claim0
            - mountPath: /docker-entrypoint-initdb.d
              name: db-claim1
            - mountPath: /srv/app/scripts
              name: db-claim2
            - mountPath: /run/secrets/vrooli/prod
              name: db-claim3
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
        - name: db-claim2
          persistentVolumeClaim:
            claimName: db-claim2
        - name: db-claim3
          persistentVolumeClaim:
            claimName: db-claim3
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: vrooli-app
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/vrooli-app: "true"
  podSelector:
    matchLabels:
      io.kompose.network/vrooli-app: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: docs
  name: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: docs
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-proxy: "true"
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: docs
    spec:
      containers:
        - args:
            - serve
            - --dev-addr=0.0.0.0:4000
          image: docs
          name: docs
          ports:
            - containerPort: 4000
          resources: {}
          volumeMounts:
            - mountPath: /docs
              name: docs-claim0
      restartPolicy: Always
      volumes:
        - name: docs-claim0
          persistentVolumeClaim:
            claimName: docs-claim0
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: nginx-proxy
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/nginx-proxy: "true"
  podSelector:
    matchLabels:
      io.kompose.network/nginx-proxy: "true"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - chmod +x /srv/app/scripts/* && /srv/app/scripts/redis.sh
          image: redis:7-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            failureThreshold: 5
            periodSeconds: 10
            timeoutSeconds: 5
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/data/redis
              name: redis-claim0
            - mountPath: /srv/app/scripts
              name: redis-claim1
      restartPolicy: Always
      volumes:
        - name: redis-claim0
          persistentVolumeClaim:
            claimName: redis-claim0
        - name: redis-claim1
          persistentVolumeClaim:
            claimName: redis-claim1
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-proxy: "true"
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: server
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - chmod +x /srv/app/scripts/* && /srv/app/scripts/server.sh
          image: server:prod
          name: server
          ports:
            - containerPort: 5329
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/data/logs
              name: server-claim0
            - mountPath: /srv/app/data/uploads
              name: server-claim1
            - mountPath: /srv/app/data/stats
              name: server-claim2
            - mountPath: /srv/app/packages/ui/dist
              name: server-claim3
            - mountPath: /run/secrets/vrooli/prod
              name: server-claim4
      restartPolicy: Always
      volumes:
        - name: server-claim0
          persistentVolumeClaim:
            claimName: server-claim0
        - name: server-claim1
          persistentVolumeClaim:
            claimName: server-claim1
        - name: server-claim2
          persistentVolumeClaim:
            claimName: server-claim2
        - name: server-claim3
          persistentVolumeClaim:
            claimName: server-claim3
        - name: server-claim4
          persistentVolumeClaim:
            claimName: server-claim4
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f /root/Programming/Vrooli/scripts/../docker-compose-prod.yml.edit -o k8s.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/nginx-proxy: "true"
        io.kompose.network/vrooli-app: "true"
        io.kompose.service: ui
    spec:
      containers:
        - args:
            - /bin/sh
            - -c
            - chmod +x /srv/app/scripts/* && /srv/app/scripts/ui.sh
          image: ui:prod
          name: ui
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /srv/app/packages/ui/dist
              name: ui-claim0
      restartPolicy: Always
      volumes:
        - name: ui-claim0
          persistentVolumeClaim:
            claimName: ui-claim0
status: {}
